Updates to nav and log view
uses flex layout.attrs

--- a/assets/app/styles/_log.less
+++ b/assets/app/styles/_log.less
@@ -1,17 +1,28 @@
+.log-title {
+  margin-top: 0;
+}
 .log-timestamp {
   margin-bottom: 10px;
 }
 .log-view {
-    background-color: #D9DBDC;
-    padding: 12px 12px 0;
-  .log-filter {
-    padding-bottom: 10px;
-    .form-group {
-      margin-bottom: 0;
-    }
+  background-color: #042029;
+  margin: 10px 0;
+  padding: 0px 10px 0;
+  position: relative;
+  pre, pre code {
+    background-color: transparent;
+    border: 0;
+    color: #98C1C8;
+    margin-bottom: 0;
+    padding: 0 6px;
+  } 
+  .log-scroll {
+    color: #fff;
+    position: absolute;
+    right: 10px;
+    top: 3px;
   }
   .log-view-output {
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 12px;
   }
 }
