--- a/assets/app/styles/_variables.less
+++ b/assets/app/styles/_variables.less
@@ -52,6 +52,7 @@
 @sidebar-right-width-lg: 33%;
 @sidebar-right-width-md: 30%;
 @sidebar-right-width-sm: 27%;
+@screen-lg-max: (@screen-xlg-min - 1);
 @screen-xlg-min: 1600px;
 @status-bg-color: #E6ECF1;
 @status-border-color: #BFCEDB;
