--- a/assets/app/styles/_core.less
+++ b/assets/app/styles/_core.less
@@ -293,8 +293,13 @@ html, body {
   margin-left: 3px;
 }
 
-// Misc
+
+// Misc 
+// TODO: pull out into _partials where it makes sense 
 // --------------------------------------------------
+a[ng-click] {
+  cursor: pointer;
+}
 .action-inline {
   margin-left: @action-link-inline-margin;
   font-size: @font-size-small;
@@ -468,4 +473,9 @@ select:invalid {
 }
 .input-number {
   width: 60px;
+}
+
+[flex].page-header {
+  // reduced for consistency if used with flex 
+  margin-top: 21px;
 }
