--- a/assets/app/styles/_log.less
+++ b/assets/app/styles/_log.less
@@ -15,7 +15,7 @@
     color: #98C1C8;
     margin-bottom: 0;
     padding: 0 6px;
-  } 
+  }
   .log-scroll {
     color: #fff;
     position: absolute;
@@ -27,9 +27,15 @@
   }
 }
 
-.log-line.even {
-  background-color: #fff;
+.log-line {
+    color: #98C1C8;
 }
-.log-line.odd {
-  background-color: #F9F9F9;
+.log-line.even {}
+.log-line.odd {}
+.log-line:hover {
+  background-color: #fff;
+  color: 000;
+}
+.line-number {
+
 }
