initial stub in of affix on log to bottom link

--- a/assets/app/styles/_log.less
+++ b/assets/app/styles/_log.less
@@ -18,9 +18,19 @@
   }
   .log-scroll {
     color: #fff;
+  }
+  .log-scroll.affix {
+    position: fixed;
+    right: 20px;
+    top: 0;
+  }
+  .log-scroll.affix-top {
     position: absolute;
-    right: 10px;
+    right: 20px;
     top: 3px;
+  }
+  .log-scroll.affix-bottom {
+
   }
   .log-view-output {
     font-size: 12px;
