--- a/assets/app/styles/_core.less
+++ b/assets/app/styles/_core.less
@@ -447,6 +447,11 @@ select:invalid {
   width: 12px;
 }
 
+.spinner.spinner-inverse {
+  border-color: rgba(0,153,211, .25);
+  border-top-color: rgba(0,153,211, .75);
+}
+
 .attention-message {
   background-color: lighten(@brand-primary, 20%);
   border: 1px solid darken(@brand-primary, 10%);
