--- a/assets/app/styles/_log.less
+++ b/assets/app/styles/_log.less
@@ -5,47 +5,96 @@
   margin-bottom: 10px;
 }
 .log-view {
-  background-color: #042029;
-  margin: 10px 0;
-  padding: 0px 10px 0;
+  background-color: @log-bg-color;
+  padding: 0;
   position: relative;
   pre, pre code {
     background-color: transparent;
     border: 0;
     color: #98C1C8;
     margin-bottom: 0;
-    padding: 0 6px;
+    overflow: visible;
+    padding: 0 10px;
   }
   .log-scroll {
-    color: #fff;
+    a:hover {
+      color: @link-hover-color-bright;
+    }
   }
-  .log-scroll.affix {
+  .log-scroll-top.affix {
     position: fixed;
-    right: 20px;
+    right: 30px;
     top: 0;
   }
-  .log-scroll.affix-top {
+  .log-scroll-top.affix-top {
     position: absolute;
-    right: 20px;
-    top: 3px;
+    right: 10px;
+    top: 0;
   }
-  .log-scroll.affix-bottom {
+  .log-scroll-top.affix-bottom {
 
+  }
+  .log-scroll-bottom {
+    position: absolute;
+    bottom: 0;
+    right: 10px;
   }
   .log-view-output {
     font-size: 12px;
+    padding: 20px 0 0;
+    &:before {
+      content: '';
+      display: block;
+      height: 100%;
+      width: 1px;
+      background-color: lighten(@log-bg-color, 5%);
+      top: 0;
+      left: 60px;
+      position: absolute;
+    }
+    .spinner-inverse {
+      left: 50%;
+      position: absolute;
+    }
   }
 }
 
+.log-link-external {
+  a {
+    margin-left: 20px;
+  }
+  i {
+    font-size: @font-size-xsmall;
+    margin-left: 5px;
+  }
+}
 .log-line {
     color: #98C1C8;
 }
 .log-line.even {}
 .log-line.odd {}
 .log-line:hover {
-  background-color: #fff;
+  background-color: lighten(@log-bg-color, 3%);
   color: 000;
 }
-.line-number {
-
+.log-line-number {
+  &:hover, &:focus {
+    background-color: lighten(@log-bg-color, 8%);
+    color: @link-hover-color-bright;
+  }
+  span {
+    width: 60px;
+    padding-right: 10px;
+  }
+}
+.log-line-text {
+  padding: 0 10px;
+}
+.log-chromeless {
+  margin-top: -1px;
+  .log-view {
+    .log-scroll-top.affix {
+      right: 10px;
+    }
+  }
 }
